--- a/css/style.css
+++ b/css/style.css
@@ -742,7 +742,7 @@ img {
 }
 
 .story_title {
-    max-width: 650px;
+    max-width: 580px;
     width: 100%;
     margin-left: auto;
     color: rgb(255, 255, 255);
@@ -810,6 +810,10 @@ img {
     text-decoration: none;
     border: 1px solid transparent;
     line-height: 190%;
+    display: flex;
+    max-width: 200px;
+    justify-content: center;
+    align-items: center;
     transition: all .3s;
 }
 
@@ -952,13 +956,13 @@ img {
 
 .monthly:hover,
 .yearly:hover,
-.popular:hover,
 .seeFeatures:hover,
 .send:hover,
 .contact_us:hover {
     border: 1px solid rgb(0, 163, 255);
     background-color: rgb(14, 14, 14);
     color: rgb(0, 163, 255);
+    cursor: pointer;
 }
 
 .popular {
@@ -978,7 +982,6 @@ img {
     border-radius: 10px;
     background: rgb(0, 163, 255);
     padding: 14px 45px;
-    cursor: pointer;
     align-items: center;
     justify-content: center;
     transition: all .3s;
@@ -1167,6 +1170,7 @@ img {
     line-height: 190%;
     width: 100%;
     transition: all .3s;
+    border: 1px solid transparent;
 }
 
 /* talk content box start */
@@ -1398,5 +1402,112 @@ img {
     .buisnes_training {
         width: 750px;
         height: 482px;
+    }
+
+    .creating-top-box-text {
+        font-size: 18px;
+    }
+
+    .creating_card_title {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .creating_card_title1 {
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .creating_card_text {
+        font-size: 16px;
+    }
+
+    .card_link {
+        font-size: 16px;
+    }
+
+    .story_title {
+        font-size: 48px;
+        max-width: 503px;
+    }
+
+    .story_title_line {
+        left: 250px;
+    }
+
+    .story_content_box {
+        top: 260px;
+    }
+
+    .position_card {
+        max-width: 680px;
+        padding: 48px;
+    }
+
+    .position_card_text {
+        font-size: 16px;
+    }
+
+    .ptichkali_item {
+        gap: 10px;
+        font-size: 14px;
+    }
+
+    .position_btn {
+        font-size: 14px;
+        line-height: 120%;
+    }
+
+    .designerGirl {
+        max-width: 700px;
+        height: 880px;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+    .prices_card {
+        justify-content: space-between;
+        padding: 63px 60px 62px;
+    }
+
+    .seeFeatures {
+        font-size: 14px;
+        padding: 14px 20px;
+    }
+}
+
+@media(max-width:1200px) {
+    .creating_card_box {
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 20px;
+    }
+
+    .creating_card_text {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .creating_card {
+        align-items: normal;
+        padding: 32px 26px;
+    }
+
+    .card_link {
+        margin-left: auto;
+    }
+
+    .brand_box_wall {
+        display: none;
+    }
+
+    .brands_box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .lagatip {
+        width: 100%;
+        height: 100px;
     }
 }
