--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ img {
     font-size: 59px;
     font-weight: 700;
     line-height: 48px;
-    width: 460px;
+    max-width: 460px;
     margin-bottom: 49px;
 }
 
@@ -429,7 +429,7 @@ img {
 }
 
 .buisnes_training {
-    width: 813px;
+    width: 100%;
     height: 542px;
     border-radius: 10px;
     box-shadow: 0 0 15px 5px gray;
@@ -826,6 +826,7 @@ img {
 
 .designerGirl {
     max-width: 787px;
+    box-shadow: 0 0 15px 5px gray;
 }
 
 /* partners section start */
@@ -1309,6 +1310,11 @@ img {
     display: flex;
 }
 
+/* .buisnes_content{
+    min-width: none;
+} */
+
+/* LAPTOP VERSION */
 @media(max-width: 1390px) {
 
     .nav-link {
@@ -1400,7 +1406,8 @@ img {
     }
 
     .buisnes_training {
-        width: 750px;
+        width: 700px;
+        object-fit: cover;
         height: 482px;
     }
 
@@ -1476,6 +1483,8 @@ img {
     }
 }
 
+/* SPECIAL MEDIA */
+
 @media(max-width:1200px) {
     .creating_card_box {
         grid-template-columns: repeat(2, 1fr);
@@ -1509,5 +1518,248 @@ img {
     .lagatip {
         width: 100%;
         height: 100px;
+    }
+
+    .buisnes_training {
+        max-width: 590px;
+        object-fit: cover;
+        height: 390px
+    }
+}
+
+@media (max-width:900px) {
+    .intelegent_container{
+        flex-direction: column;
+    }   
+    
+    .intelegent_boy, .intelegent_title, .intelegent_text, .learn_more{
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+}
+
+/* TAP VERSION */
+
+@media(max-width:1050px) {
+    .hero-container {
+        gap: 181px;
+    }
+
+    .header-container{
+        gap: 180px;
+    }
+
+    .nav-list{
+        gap: 30px;
+    }
+
+    .nav-link{
+        font-size: 13px;
+    }
+
+    .hero_title {
+        font-size: 40px;
+        max-width: 412px;
+    }
+
+    .hero_img {
+        width: 315.95px;
+        height: 340.88px;
+    }
+
+    .intelegent_boy {
+        width: 519px;
+        height: 357px;
+    }
+
+    .intelegent_title {
+        font-size: 30px;
+        line-height: 120%;
+    }
+
+    .intelegent_text {
+        font-size: 14px;
+    }
+
+    .design_content_title {
+        font-size: 28px;
+    }
+
+    .design_content_text {
+        font-size: 16px;
+    }
+
+    .open_btn {
+        font-size: 18px;
+    }
+
+    .design_container {
+        gap: 48px;
+    }
+
+    .open_text {
+        font-size: 16px;
+    }
+
+    .buisnes_title {
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    .learn_more{
+        padding: 8px 40px;
+    }
+
+    .buisnes_text {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .creating-top-box-title {
+        font-size: 45px;
+        padding-right: 20px;
+    }
+
+    .creating-top-box-text {
+        font-size: 14px;
+        padding-left: 20px;
+    }
+
+    .buisnes_training {
+        max-width: 572px;
+        object-fit: cover;
+        height: 337px;
+    }
+
+    .brands_title {
+        font-size: 48px;
+        max-width: 730px;
+    }
+
+    .brend_card_title {
+        font-size: 26px;
+        line-height: 150%;
+    }
+
+    .brend_card_text {
+        font-size: 16px;
+        line-height: 150%;
+    }
+
+    .brends_card_container {
+        padding-left: 17.73px;
+    }
+
+    .brend_card_svg {
+        width: 60px;
+        height: 60px;
+    }
+
+    .designerGirl {
+        max-width: 535px;
+        height: 644px;
+    }
+
+    .story_title {
+        font-size: 35px;
+        max-width: 370px;
+    }
+
+    .story_title_line {
+        bottom: 19px;
+        left: 193px;
+    }
+
+    .position_card_text {
+        font-size: 14px;
+        max-width: 481px;
+    }
+
+    .position_card {
+        padding: 25px;
+    }
+
+    .story_content_box {
+        top: 140px;
+    }
+
+    .prices_title {
+        font-size: 49px;
+    }
+
+    .popular {
+        max-width: 176px;
+        font-size: 14px;
+        padding: 7px 3px;
+        top: -23px;
+    }
+
+    .seeFeatures {
+        max-width: 203px;
+        padding: 11px;
+    }
+
+    .prices_card_title {
+        font-size: 25px;
+        line-height: 150%;
+    }
+
+    .startup_title {
+        font-size: 14px;
+        margin-bottom: 25px;
+        line-height: 150%;
+    }
+
+    .prices_card_line {
+        margin-bottom: 25px;
+    }
+
+    .prices_card {
+        padding: 40px 40px 35px;
+    }
+
+    .talk_container {
+        flex-direction: column-reverse;
+        justify-content: center;
+        /* align-items: center; */
+    }
+
+    .talk_input_box {
+        max-width: none;
+    }
+
+    .talk_content_box {
+        /* margin-right: auto; */
+        max-width: none;
+    }
+
+    .talk_line {
+        margin-right: 279px;
+    }
+
+    .footer_container {
+        display: flex;
+    }
+
+    .footer_box {
+        flex-direction: column;
+        align-items: start;
+        gap: 40px;
+        margin-bottom: 0;
+    }
+
+    .footer_text {
+        text-align: left;
+    }
+
+    .footer_logo_box {
+        flex-direction: column;
+        margin-right: 0;
+    }
+
+    .line-box {
+        display: none;
     }
 }
