--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ img {
     bottom: 20px;
     left: 24px;
     padding: 91px 86.5px 19.5px 29px;
-    width: 335px;
+    max-width: 335px;
     background: linear-gradient(134.71deg, rgba(236, 241, 230, 0.58) 4.934%, rgba(65, 65, 75, 0.71) 65.612%);
 }
 
@@ -1385,7 +1385,7 @@ img {
     }
 
     .design_img_box {
-        width: 600px;
+        max-width: 600px;
         min-width: 400px;
         display: flex;
     }
@@ -1406,7 +1406,7 @@ img {
     }
 
     .buisnes_training {
-        width: 700px;
+        max-width: 700px;
         object-fit: cover;
         height: 482px;
     }
@@ -1527,19 +1527,6 @@ img {
     }
 }
 
-@media (max-width:900px) {
-    .intelegent_container{
-        flex-direction: column;
-    }   
-    
-    .intelegent_boy, .intelegent_title, .intelegent_text, .learn_more{
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    }
-
-}
-
 /* TAP VERSION */
 
 @media(max-width:1050px) {
@@ -1547,15 +1534,75 @@ img {
         gap: 181px;
     }
 
-    .header-container{
+    .header {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .hero {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .intelegent {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .design {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .buisnes {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .creating {
+        padding-top: 45px;
+        padding-bottom: 40px;
+    }
+
+    .brands {
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    .story {
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+
+    .partners {
+        margin-top: 60px;
+        margin-bottom: 70px;
+    }
+
+    .prices {
+        padding-top: 80px;
+        padding-bottom: 60px;
+    }
+
+    .talk {
+        padding-top: 80px;
+        padding-bottom: 50px;
+    }
+
+    .footer {
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+
+    .header-container {
         gap: 180px;
     }
 
-    .nav-list{
+    .nav-list {
         gap: 30px;
     }
 
-    .nav-link{
+    .nav-link {
         font-size: 13px;
     }
 
@@ -1608,7 +1655,7 @@ img {
         line-height: 30px;
     }
 
-    .learn_more{
+    .learn_more {
         padding: 8px 40px;
     }
 
@@ -1761,5 +1808,247 @@ img {
 
     .line-box {
         display: none;
+    }
+}
+
+/* MOBILE VERSION */
+
+@media(max-width: 900px) {
+    .nav-list {
+        display: none;
+    }
+
+    .intelegent_container {
+        flex-direction: column;
+    }
+
+    .intelegent_boy,
+    .intelegent_title,
+    .intelegent_text,
+    .learn_more {
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+
+    .hamburger_search_box {
+        width: 100%;
+    }
+
+    .hero-container {
+        flex-direction: column;
+        gap: 54px;
+    }
+
+    .hero_title {
+        text-align: center;
+        max-width: 600px;
+    }
+
+    .intelegent_boy {
+        width: 90%;
+        object-fit: cover;
+    }
+
+    .design_container {
+        flex-direction: column;
+    }
+
+    .design_img_box {
+        max-width: 410px;
+        height: 410px;
+        min-width: 317px;
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .design_content_box {
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+    }
+
+    .design_content_title {
+        max-width: 330px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .design_content_line {
+        display: inline-flex;
+    }
+
+    .design_content_line::after {
+        display: none;
+    }
+
+    .design_counter {
+        padding: 11px 20.5px 10.5px 10px;
+        max-width: 200px;
+    }
+
+    .buisnes_container {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .creating-top-box {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .creating-top-box-title {
+        font-size: 30px;
+    }
+
+    .creating_card_box {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .tools_box {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .tools_title {
+        text-align: center;
+    }
+
+    .brands_title {
+        font-size: 30px;
+    }
+
+    .brends_card_box {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .brend_card_text {
+        font-size: 12px;
+    }
+
+    .brends_card {
+        padding: 13px;
+    }
+
+    .designerGirl {
+        display: none;
+    }
+
+    .story_content_box {
+        position: initial;
+        padding-right: 0;
+    }
+
+    .position_card_text {
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .ptichkali_item {
+        font-size: 12px;
+    }
+
+    .partners_title {
+        font-size: 30px;
+    }
+
+    .brands_box {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .partners {
+        margin-bottom: 0;
+    }
+
+    .lagatip {
+        height: 70px;
+    }
+
+    .prices_title {
+        font-size: 30px;
+    }
+
+    .monthly,
+    .yearly {
+        padding: 14px;
+        font-size: 12px;
+    }
+
+    .prices_btn_box {
+        gap: 15px;
+    }
+
+    .prices_card_box {
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 20px;
+    }
+
+    .popular {
+        display: none;
+    }
+
+    .talk_title {
+        font-size: 30px;
+    }
+
+    .talk_line{
+        margin-bottom: 30px;
+    }
+
+    .talk_text{
+        font-size: 14px;
+    }
+
+    .contact_us{
+        font-size: 12px;
+        padding: 6px 18px;
+    }
+
+    .form_names{
+        flex-direction: column;
+        margin-bottom: 20px;
+        gap: 20;
+    }
+
+    .talk_input_box{
+        padding: 18px;
+    }
+
+    .names{
+        margin-bottom: 0;
+    }
+
+    .info{
+        margin-bottom: 0px;
+    }
+    
+    .send{
+        padding: 12px;
+    }
+
+    .footer_container{
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer_logo_box{
+        flex-direction: row;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .footer_box{
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+    }
+
+    .footer_text{
+        text-align: center;
     }
 }
