--- a/css/style.css
+++ b/css/style.css
@@ -1484,6 +1484,8 @@ img {
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    gap: 20px;
+    padding: 0px 20px;
     align-items: end;
 
 }
@@ -1522,6 +1524,7 @@ img {
     height: 738px;
     display: flex;
     position: relative;
+    object-fit: cover;
 }
 
 .work-img {
@@ -1553,6 +1556,192 @@ img {
     color: rgb(255, 255, 255);
     font-weight: 700;
     line-height: 190%;
+}
+
+/* mind section start */
+
+.mind {
+    padding-top: 192px;
+    padding-bottom: 179px;
+}
+
+.mind-container {
+    max-width: 1620px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 20px;
+}
+
+.mind-title {
+    max-width: 1025px;
+    color: rgb(255, 255, 255);
+    font-size: 59px;
+    font-weight: 700;
+    line-height: 125.5%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 201px;
+}
+
+.mind-box {
+    max-width: 1550px;
+    display: flex;
+    gap: 43px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 302px;
+}
+
+.mind-box1 {
+    max-width: 1550px;
+    display: flex;
+    gap: 43px;
+    align-items: center;
+    justify-content: end;
+    margin-left: auto;
+    margin-bottom: 302px;
+}
+
+.mind-img {
+    max-width: 788px;
+    height: 447px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px 5px gray;
+}
+
+.mind-content {
+    max-width: 719px;
+}
+
+.mind-content-title {
+    max-width: 579px;
+    color: rgb(255, 255, 255);
+    font-size: 31px;
+    font-weight: 700;
+    line-height: 190%;
+    margin-bottom: 17px;
+}
+
+.mind-content-text {
+    max-width: 712px;
+    color: rgba(255, 255, 255, 0.75);
+    font-weight: 500;
+    line-height: 190%;
+    margin-bottom: 38px;
+}
+
+.mind-content-title1 {
+    max-width: 637px;
+    color: rgb(255, 255, 255);
+    font-size: 31px;
+    font-weight: 700;
+    line-height: 190%;
+    margin-bottom: 17px;
+}
+
+.mind-list {
+    list-style: none;
+    max-width: 637px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 12px;
+}
+
+.mind-item {
+    color: rgba(255, 255, 255, 0.75);
+    font-weight: 500;
+    line-height: 190%;
+}
+
+/* team section started */
+.team {
+    padding-top: 179px;
+    padding-bottom: 80px;
+}
+
+.team-container {
+    max-width: 1522px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 20px;
+}
+
+.creating-top-box1 {
+    display: flex;
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    margin-bottom: 101px;
+}
+
+.team-card-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
+}
+
+.team-card {
+    /* placeholder */
+    position: absolute;
+    width: 100%;
+    height: 593px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+    position: relative;
+}
+
+.team-card-content {
+    min-width: 224px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 52px;
+}
+
+.worker-name {
+    max-width: 224px;
+    color: rgb(255, 255, 255);
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 190%;
+    text-align: center;
+}
+
+.worker-work {
+    max-width: 137px;
+    margin-bottom: 21px;
+    color: rgb(0, 163, 255);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 190%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.worker-img{
+    width: 100%;
+    height: 100%;
+}
+
+.team-card-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.logo {
+    width: 34px;
+    height: 34px;
+    background-color: #fff;
+    color: #fff;
+    border-radius: 10px;
 }
 
 /* LAPTOP VERSION */
